Revision history for Module::Provision

          - Better parsing of module name from project file
          - Validate args in call to update_copyright_year

0.34.1    2014-05-19 12:45:10
          - c6a96d00-df30-11e3-84c4-fc77f9652e90 Test::Requires Hash::MoreUtils

0.33.1    2014-05-15 21:54:47
          - Removed dependency on File::Slurp. Not needed since
            D:Z:P:ManifestInRoot became a seperate dist

0.32.1    2014-05-01 15:32:09
          - Removed Ident and VERSION lines

0.31.2    2014-01-24 21:04:29
          - Updated dependencies
          - Select project does better job of picking the project dir

0.30.1    2014-01-15 18:05:13
          - Using Unexpected exception classes
          - Stopped using C::U::File::io
          - Apply C::U::T::MetaData for get_package_meta method
          - Stopped localizing error messages
          - Added update_file method to copy from template dir

0.29.1    2013-12-12 21:26:25
          - Remove prereqs below min_perl_ver

0.28.1    2013-12-12 14:16:26
          - Allow CPAN Testing to smoke below min_perl_ver

0.27.1    2013-12-11 17:23:36
          - Dropped create_readme_md from share/Build.PL
            Closes RT#91320
          - Tweaked boilerplate in share/*.t
          - Simplified share/DZ_Build.PL
          - Use DZ::P::AbstractFromPOD
          - Use DZ::P::LicenseFromModule
          - Fixed fd3 usage in select_project

0.26.1    2013-11-25 21:28:18
          - Dropped DZ::P::MarkdownInRoot from dist.ini
          - Added select_project
          - Added ::Config::test_env_vars

0.25.1    2013-11-23 13:35:51
          - Dropped dependency on MooX::Options
          - Made ensure_class_loaded into a function

0.24.1    2013-09-16 21:22:24
          - Stopped re interpretaion of homedir in appldir builder

0.23.1    2013-09-14 10:37:11
          - Bumped Moo dependency closes RT#87575

0.22.1    2013-08-21 13:54:58
          - Bumped version to fix indexing

0.21.1    2013-08-21 13:25:21